# CORE                                                                                     #
#   Add here everything which connected to the core: (spells,groups,maps etc..)            #
#                                                                                          #
############################################################################################

~>10.07.2012:

- Core/Spells: Implemented SPELL_ATTR4_IGNORE_RESISTANCES. (Merge to TC (Apr 09, 2012))
- Add a missing spell (Blessed Life) to spell_dbc.
- Core/Spells: Health leech spells should still do damage even if the caster is dead (Devouring Plague).
- Core/Item: Fix possible exploit stacking critical strike when switching weapons during disarm.
- Scripts/Spells: When Frost Warding negates the damage taken, the Frost Ward should remain intact.
- Core/Spells: Fixed rogue T10 2P and 4P bonuses.
- Core/Spells: Fixes the rune cooldown when a hit mises the target.
- Core/Visibility: Pets should be always visible for group mates.
- Fix Gnomeregan Pride.
- Core/Spells: Do not proc spells with PROC_FLAG_DONE_SPELL_MAGIC_DMG_CLASS_(NEG|POS) if there is no target, reimplemented Storm, Earth and Fire talent in another way.
- Core/Spells: Fixed Riptide bonus on Chain Heal.
- Fix Earthen Power.
- Fixed consuming of Grounding Totem when it's not redirected any spell.
- Added spells for Fire Elemental Totem and Earth Elemental Totem.
- Fix Brambles - hardcoding increased dmg of Treants.
- Fix Elixir of Minor Fortitude.
- Fix Warr T8 4p bonus.
- Fix DK T8 4p bonus.
- PeAI update.
- Core/Spells: Fix Rabbit Costume and Noblegarden Bunny.
- Core/Spells: Implement SPELL_ATTR4_PROC_ONLY_ON_CASTER properly.
- Fixed Libram of Veracity proc.
- Core/Spells: Fix unrelenting assault not proccing aura when overpower is used while target is casting.
- Core/Spells: Fixed Dancing Rune Weapon double-applying the duration bonus of the glyph.