@@ -14,15 +14,11 @@ G3D (a commercial-grade C++ 3D engine available as Open Source (BSD License)
 
 jemalloc (a general-purpose scalable concurrent malloc-implementation)
   http://www.canonware.com/jemalloc/
-  Version: 2.1.0
+  Version: 2.2.5
   
 libMPQ (a library for reading MPQ files)
   https://libmpq.org/
   Version: 1.0.4
-
-MersenneTwister (a very fast random number generator)
-  http://www.math.sci.hiroshima-u.ac.jp/~m-mat/MT/emt.html
-  Version: 0.4.2
 
 MySQL (the world's most popular open source database software)
   http://www.mysql.com/
@@ -42,4 +38,4 @@ zlib (A Massively Spiffy Yet Delicately Unobtrusive Compression Library)
 
 gSOAP (a portable development toolkit for C and C++ XML Web services and XML data bindings)
   http://gsoap2.sourceforge.net/
-  Version: 2.8.0
+  Version: 2.8.2
